<resources>
    <string name="app_name">@string/foodDeliveryAppTitle</string>
    <string name="preference_file_key">shared_preference_key</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_internet">No internet! Check your settings.</string>
    <string name="login_text">Login</string>
    <string name="createAnAccount">Create an Account</string>
    <string name="landingMotto">Discover the best foods from restaurants nearby and fast delivery to your doorstep</string>
    <string name="foodDeliveryAppTitle">One click Eats</string>
    <string name="landingFoodDelivery">FOOD DELIVERY</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="add_your_details_to_login">Add your details to login</string>
    <string name="add_your_details_to_sign_up">Add your details to sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="signUp">Sign up</string>
    <string name="your_name">Your name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="what_do_you_feel_like_eating">What do you feel like eating?</string>
    <string name="hint_search_by_restaurant_or_dish">Search by restaurant or dish</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="taco">Taco</string>
    <string name="donuts">Donuts</string>
    <string name="kebab">Kebab</string>
    <string name="asian">Asian</string>
    <string name="greeting_user">Hi, %s</string>
    <string name="generic_error">Oops, something happend. Please try again.</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="estimated_time_30_50_min">30-50 min</string>
    <string name="my_tasks">My tasks</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_clients">Total Clients</string>
    <string name="total_restaurants">Restaurants</string>
    <string name="revenue">Revenue</string>
    <string name="dashboard">Dashboard</string>
    <string name="order_list">Order List</string>
    <string name="new_order">New Order</string>
    <string name="amount_times_ordered">times ordered</string>
    <string name="trending_items">Trending Items</string>
    <string name="weekly_revenue_evolution">Weekly revenue evolution</string>
    <string name="card_number">Card number</string>
    <string name="expiry_month">MM/YYYY</string>
    <string name="cvv">CVV</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="priceFormatter">$ %5.2f</string>
    <string name="ingredients">Ingredients</string>
    <string name="details">Details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="you_need_to_update_the_quantity">You need to update the quantity</string>
    <string name="product_added_to_cart">Product added to cart.</string>
    <string name="update">Update</string>
    <string name="quantity_updated_successfully">Quantity updated successfully</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="delivery_address">Delivery address</string>
    <string name="zip_code">Zip code</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="delivery_place">Delivery place</string>
    <string name="delivery_time">Delivery time</string>
    <string name="courier">Courier</string>
    <string name="eta_35_min">35 min</string>
    <string name="thanks">Thanks</string>
    <string name="enjoy_your_food">Enjoy your food!</string>
    <string name="well_done_courier">Well done!</string>
    <string name="mark_product_as_picked_up">Mark product as picked-up</string>
    <string name="head_to_client">Head to client</string>
    <string name="please_make_sure_to_pick_up_all_products">Please make sure to pick-up all products.</string>
    <string name="mark_order_as_delivered">Mark order as delivered</string>
    <string name="online">ONLINE</string>
    <string name="plan_items_pick_up_route">Plan items pick-up route</string>
    <string name="you_need_to_allow_location_related_permissions_in_order_to_use_live_tracking">You need to allow location-related permissions in order to use live tracking.</string>
    <string name="press_to_refresh">Press to refresh</string>
    <string name="accept_order">Accept order</string>
    <string name="there_was_an_issue_establishing_the_route_please_verify_location_permissions_and_retry">There was an issue establishing the route. Please verify location permissions and retry.</string>
    <string name="this_field_is_required">This field is required</string>
</resources>