<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driver.ui.orderaccepted.CourierOrderAcceptedFragment">

    <TextView
        android:id="@+id/screenTitle"
        style="@style/TextView.MediumPrint.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Order #17826317SX" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dimen_20dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/planRestaurantsRoute"
        app:layout_constraintTop_toBottomOf="@id/screenTitle"
        tools:listitem="@layout/item_courier_order_accepted" />

    <Button
        android:id="@+id/planRestaurantsRoute"
        style="@style/Button.FoodDelivery.Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:text="@string/plan_items_pick_up_route"
        app:layout_constraintBottom_toTopOf="@id/headToClientLocation" />

    <Button
        android:id="@+id/headToClientLocation"
        style="@style/Button.FoodDelivery.Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:text="@string/head_to_client"
        app:layout_constraintBottom_toTopOf="@id/markOrderAsDelivered" />

    <Button
        android:id="@+id/markOrderAsDelivered"
        style="@style/Button.FoodDelivery.Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:backgroundTint="@color/crazy_green"
        android:text="@string/mark_order_as_delivered"
        android:textColor="@color/dirty_white"
        app:layout_constraintBottom_toTopOf="@+id/acceptOrder" />

    <Button
        android:id="@+id/acceptOrder"
        style="@style/Button.FoodDelivery.Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:backgroundTint="@color/order_faded_green"
        android:text="@string/accept_order"
        android:textColor="@color/dirty_white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <include
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>