<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".customer.checkout.CheckoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/goBack"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/screenTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/screenTitle"
            app:tint="@color/dark_gray_3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/screenTitle"
            style="@style/TextView.BigPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/checkout"
            android:textColor="@color/dark_gray_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="@dimen/dimen_20dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/addressAndPaymentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:background="@drawable/card_crazy_green_bg_20dp"
            android:orientation="vertical"
            android:paddingVertical="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/screenTitle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/addressTitle"
                style="@style/TextView.MediumPrint.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:text="@string/delivery_address"
                android:textColor="@color/dark_blue_bg" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/street"
                style="@style/EditText.Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:hint="@string/street" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/city"
                style="@style/EditText.Form"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:hint="@string/city" />

            <androidx.appcompat.widget.AppCompatEditText
                android:inputType="number"
                android:id="@+id/zipCode"
                style="@style/EditText.Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:hint="@string/zip_code" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cardTitle"
                style="@style/TextView.MediumPrint.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:text="@string/payment"
                android:textColor="@color/dark_blue_bg" />

            <include
                android:id="@+id/layoutCardDetails"
                layout="@layout/layout_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/orderSummaryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:background="@drawable/card_dark_gray_shadow_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressAndPaymentContainer">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtotalTitle"
                style="@style/TextView.MediumPrint.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/subtotal"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtotalAmount"
                style="@style/TextView.MediumPrint.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/subtotalTitle"
                tools:text="$113.30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deliveryTitle"
                style="@style/TextView.MediumPrint.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/delivery"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtotalTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deliveryAmount"
                style="@style/TextView.MediumPrint.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/deliveryTitle"
                tools:text="$3.00" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalTitle"
                style="@style/TextView.MediumPrint.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/total"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deliveryTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalAmount"
                style="@style/TextView.MediumPrint.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:textColor="@color/dark_gray_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/totalTitle"
                tools:text="$116.30" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/payOrder"
                style="@style/Button.FoodDelivery.Full"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:background="@drawable/card_crazy_green_bg"
                android:text="@string/pay"
                android:textSize="@dimen/dimen_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>